# content-repurposing-app

./: .gitignore  CLAUDE.md  README.md  spec.md
backend/: .env.example  pyproject.toml
backend/app/: agent.py  auth.py  config.py  database.py  llm.py  llm_client.py  main.py  models.py  schemas.py
backend/app/routers/: agent.py  auth.py  content.py  history.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/agent/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/app/: agent-form.tsx  agent-trace.tsx  auth-form.tsx  create-form.tsx  header.tsx  motion-provider.tsx  output-tabs.tsx  platform-cards.tsx  require-auth.tsx  tone-chips.tsx
frontend/components/ui/: badge.tsx  button.tsx  tabs.tsx  textarea.tsx
frontend/lib/: api.ts  auth.tsx  constants.ts  motion.ts  types.ts  utils.ts
